# xia4ids

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
MakeOptions/: CMakeLists.txt  Clear.sh  Install.sh  Makefile
etc/: Autosort  Autosort_root  config_gasp  config_rate  config_root  config_stat  help_pixie.txt
inc/: .xia4ids.hh.swp  EventFilters.h  Exceptions.h  HelperEnumerations.hpp  LDFReader.h  Unpacker.h  XiaData.h  XiaListModeDataMask.h  calibrate.hh  correlations.hh  define_root.hh  event_builder.hh  event_builder_list.hh  event_builder_tree.hh  merge_sort.hh  nutaq4ids.hh  read_cal.hh  read_config.hh  read_ldf.hh  write_correlations.hh  write_gasp.hh  write_list.hh  write_stats.hh  write_time.hh  write_tree.hh  xia4ids.hh
scripts/: .bashrc  grafana_monitor.py  grafana_monitor.sh  pixie_control_gui.py  pixie_control_gui.py.save  pixie_luxury_setup.py  pixie_parameters.py  pixie_parameters_ALPHA_TESTING_VERSION-DO_NOT_USE_EVER_IN_EXPERIMENT.py  root_histograms_output.py  xia4ids_rate.sh  xia4ids_yield.sh  xia_monitor.sh
scripts/RILIS/: IDS_RILIS_V2.vi  IDS_Sort.sh  IDS_Start.sh  IDS_Status.sh  scan.sh  sort.sh  sort_fast.sh
scripts/macros/: hist2spec.C  root2spec.C  yield.C  yield_hist.C
scripts/macros/IS665/: CloverSum_gate.C  Clover_singles.C  Coincidences.C  Coincidences_old.C  TIME_CloverSum_gate.C  Timing_walk_La1.C  Timing_walk_La1_Beta.C  Timing_walk_La1_Beta_loop.C  Timing_walk_La1_vs_La2.C  Timing_walk_La2_Beta.C  Timing_walk_La2_vs_La1.C
scripts/macros/IS685/: ClovAlign.C  convert.sh  ids_IS685.C  ids_raw.C  merge.sh  plot.cpp
scripts/macros/LOI217/: Si_det.c  beta_gam.c  draw_clov.c  fits.c  fits.h  luxuryPeakRate.c  luxuryPeakRate2.c  luxuryPeakRate_ZF.c  peakRate.h  peakRate_old.c  rate183.c  valley.c
scripts/mk-bin-ascii/: int2ascii.c  mkascii.c  sumascii.c  sumbin.c
scripts/mk-bin-ascii/BIN2ASC_program/: bin2asc.c  mat2asc.c  mkascii.c  rebin.c
scripts/old/: grafana.sh  n4i_cern_grafana.sh  n4i_rate_grafana.sh
src/: EventFilters.cpp  LDFReader.cpp  Unpacker.cpp  XiaData.cpp  XiaDataListModeMask.cpp  nutaq4ids.cpp  xia4ids.cpp
